# Peecax

./: README.md  pyproject.toml
docs/: ces_implementation_spec.tex
examples/: parallel_plate_capacitor.py  parallel_wires_mutual_l.py  rfic_inductor.py  straight_wire_rl.py
src/peecax/: __init__.py  gds.py  geometry.py  matrices.py  rlc_fit.py  solver.py
tests/: test_analytic_sanity.py  test_peecax.py
