[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peecax"
version = "0.1.0"
description = "Differentiable PEEC-style EM solver for RFIC/MMIC using JAX and GDSFactory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "gdsfactory>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/peecax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
